Change directory to mq-sass.

--- a/stylesheets/_mq-sass.scss
+++ b/stylesheets/_mq-sass.scss
@@ -1,8 +1,8 @@
 // ==================================================
 // Imports
 // ==================================================
-@import "mq/settings.scss";
-@import "mq/functions.scss";
+@import "mq-sass/settings.scss";
+@import "mq-sass/functions.scss";
 
 // ==================================================
 // mq Mixin
