--- a/stylesheets/mq-sass/_settings.scss
+++ b/stylesheets/mq-sass/_settings.scss
@@ -21,4 +21,4 @@ $mq-breakpoints: (
 
 // Breakpoints
 // ==================================================
-$mq-only: "only screen" !default;
+$mq-media: "only screen" !default;
