Max does not -1 breakpoint value. Adjust README.

--- a/stylesheets/_mq-sass.scss
+++ b/stylesheets/_mq-sass.scss
@@ -28,9 +28,9 @@
 
     $value: strip-units($value);
 
-    @if $minmax == max {
-      $value: $value - 1;
-    }
+    // @if $minmax == max {
+    //   $value: $value - 1;
+    // }
 
     @if ($mq-ems == true) {
       $value: em($value, $mq-em-base);
