--- a/stylesheets/_mq-sass.scss
+++ b/stylesheets/_mq-sass.scss
@@ -8,75 +8,42 @@
 // mq Mixin
 // ==================================================
 @mixin mq($breakpoint, $minmax: min) {
-  $media: $mq-media;
+  @if $breakpoint == landscape or $breakpoint == portrait or $breakpoint == retina or map-has-key($mq-breakpoints, $breakpoint) or type-of($breakpoint) == "number" {
+    $media: $mq-media;
+    $media-query: "";
 
-  @if ($media == false) {
-    $media: "";
-  }
-  @else {
-    $media: $media + " and ";
-  }
-
-  $value: map-get($mq-breakpoints, $breakpoint);
-
-  @if $value != null {
-    @if $minmax != min and $minmax != max {
-      @warn "The second parameter of `@include mq()` can only accept values `min` or `max`. "
-            + "Falling back to the default, `min`.";
-      $minmax: min;
-    }
-
-    $value: strip-units($value);
-
-    // @if $minmax == max {
-    //   $value: $value - 1;
-    // }
-
-    @if ($mq-ems == true) {
-      $value: em($value, $mq-em-base);
+    @if ($media == false) {
+      $media: "";
     }
     @else {
-      $value: $value + px;
+      $media: $media + " and ";
     }
 
-    $media-query: "#{$media} (#{$minmax}-width: #{$value})";
-
-    @media #{$media-query} {
-      @content;
+    @if $breakpoint == landscape or $breakpoint == portrait {
+      $media-query: "#{$media} (orientation: #{$breakpoint})";
     }
-  }
-
-  @else {
-    @if (type-of($breakpoint) == string) {
-      @if ($breakpoint == landscape or $breakpoint == portrait) {
-        $media-query: "#{$media} (orientation: #{$breakpoint})";
-
-        @media #{$media-query} {
-          @content;
-        }
-      }
-      @else if ($breakpoint == retina) {
-        $media-query: "#{$media} (-webkit-min-device-pixel-ratio: 2)," +
-                      "#{$media} (min-resolution: 2dppx)";
-
-        @media #{$media-query} {
-          @content;
-        }
-      }
-      @else {
-        @warn "A value for your breakpoint could not be found. "
-            + "Define one in the `$mq-breakpoints` map, enter a custom value, "
-            + "or use a predefined one (e.g. retina, landscape, portrait).";
-      }
+    @else if $breakpoint == retina {
+      $media-query: "#{$media} (-webkit-min-device-pixel-ratio: 2)," +
+                    "#{$media} (min-resolution: 2dppx)";
     }
-    @else if (type-of($breakpoint) == number) {
+    @else {
       @if $minmax != min and $minmax != max {
-        @warn "The second parameter of `@include mq()` can only accept values `min` or `max`. "
+        @warn "The second parameter of `mq()` only accepts value of `min` or `max`. "
             + "Falling back to the default, `min`.";
         $minmax: min;
       }
 
-      $value: strip-units($breakpoint);
+      $value: $breakpoint;
+
+      @if map-has-key($mq-breakpoints, $breakpoint) {
+        $value: map-get($mq-breakpoints, $breakpoint);
+      }
+
+      $value: strip-units($value);
+
+      // @if $minmax == max {
+      //   $value: $value - 1;
+      // }
 
       @if ($mq-ems == true) {
         $value: em($value, $mq-em-base);
@@ -86,15 +53,15 @@
       }
 
       $media-query: "#{$media} (#{$minmax}-width: #{$value})";
+    }
 
-      @media #{$media-query} {
-        @content;
-      }
+    @media #{$media-query} {
+      @content;
     }
-    @else {
-      @warn "A value for your breakpoint could not be found. "
-          + "Define one in the `$mq-breakpoints` map, enter a custom value, "
-          + "or use a predefined one (e.g. retina, landscape, portrait).";
-    }
+  }
+  @else {
+    @warn "Invalid breakpoint value. It must be "
+        + "defined in the `$mq-breakpoints` map, a valid CSS value, "
+        + "or a predefined (e.g. retina, landscape, portrait).";
   }
 }
