--- a/stylesheets/mq-sass/_functions.scss
+++ b/stylesheets/mq-sass/_functions.scss
@@ -5,19 +5,19 @@
 // Strip units
 // ==================================================
 // Derived from Bourbon by thoughtbot (http://bourbon.io)
-@function strip-units($val) {
+@function _mq-strip-units($val) {
   @return ($val / ($val * 0 + 1));
 }
 
 // Pixels to Ems
 // ==================================================
 // Derived from Bourbon by thoughtbot (http://bourbon.io)
-@function em($pxval, $base: $mq-em-base) {
+@function _mq-em($pxval, $base: $mq-em-base) {
   @if not unitless($pxval) {
-      $pxval: strip-units($pxval);
+      $pxval: _mq-strip-units($pxval);
   }
   @if not unitless($base) {
-      $base: strip-units($base);
+      $base: _mq-strip-units($base);
   }
   @return ($pxval / $base) * 1em;
 }
