Fix bug where units are excluded when mq-ems is false.

--- a/stylesheets/_mq-sass.scss
+++ b/stylesheets/_mq-sass.scss
@@ -61,7 +61,7 @@
         $value: map-get($mq-breakpoints, $breakpoint);
       }
 
-      $value: _mq-strip-units($value * 1px);
+      $value: _mq-strip-units($value) * 1px;
 
       @if ($mq-ems == true) {
         $value: _mq-em($value, $mq-em-base);
